--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,6 @@ repositories {
 
 dependencies {
     testCompile 'org.testng:testng:6.14.3'
+    testCompile 'org.seleniumhq.selenium:selenium-java:3.12.0'
+
 }
